--- a/exercicio_modulo3.html
+++ b/exercicio_modulo3.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <h1>Formulário para cadastro</h1>
-    <label for="nome-completo">Digite seu nome completo: </label><input type="text" placeholder="Digite seu nome" id="nome-completo"/>
-    <br />
-    <label for="email-pessoal">Digite seu e-mail: </label><input type="email" placeholder="Digite seu e-mail" id="email-pessoal"/>
-    <br />
-    <label for="senha-pessoal">Digite sua senha: </label><input type="password" placeholder="Digite sua senha" id="senha-pessoal"/>
-    <br />
-    <br />
-    <button type="submit">
-        Cadastrar
-    </button>
+    <form>
+        <label for="nome-completo">Digite seu nome completo: </label><input type="text" placeholder="Digite seu nome" id="nome-completo"/>
+        <br />
+        <label for="email-pessoal">Digite seu e-mail: </label><input type="email" placeholder="Digite seu e-mail" id="email-pessoal"/>
+        <br />
+        <label for="senha-pessoal">Digite sua senha: </label><input type="password" placeholder="Digite sua senha" id="senha-pessoal"/>
+        <br />
+        <br />
+        <button type="submit">
+            Cadastrar
+        </button>
+    </form>
 </body>
 </html>
